<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="16dp">

    <!-- Back/Change Roles Button and Highlighted Title in a Horizontal Layout -->
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:cardCornerRadius="12dp"
        app:cardElevation="4dp"
        android:padding="8dp"
        android:background="@color/light_grey">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <!-- Change Roles Button (also Back Button) -->
            <ImageButton
                android:id="@+id/back_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:src="@drawable/baseline_arrow_back_ios_24"
                android:contentDescription="Back"
                android:padding="8dp"
                android:layout_marginEnd="8dp" />

            <TextView
                android:id="@+id/organizer_profile_title"
                android:layout_width="309dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:background="@drawable/rounded_text_background"
                android:padding="8dp"
                android:text="@string/facility_profile"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="16dp">

            <ImageButton
                android:id="@+id/edit_profile_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="4dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/edit_profile"
                android:padding="8dp"
                android:src="@drawable/ic_edit" />


            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/organizer_image"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="center"
                android:clickable="true"
                android:focusable="true"
                android:minWidth="120dp"
                android:minHeight="120dp"
                android:src="@drawable/ic_building"
                app:shapeAppearanceOverlay="@style/circleImage" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Name"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:layout_marginBottom="4dp" />

        <EditText
            android:id="@+id/organizer_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_name"
            android:inputType="text"
            android:enabled="false"
            android:textColor="@color/black"
            android:backgroundTint="@android:color/transparent"
            android:minHeight="32dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Email"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:layout_marginBottom="4dp" />

        <EditText
            android:id="@+id/organizer_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_email"
            android:inputType="textEmailAddress"
            android:textColor="@color/black"
            android:enabled="false"
            android:backgroundTint="@android:color/transparent"
            android:minHeight="32dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Address"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:layout_marginBottom="4dp" />

        <EditText
            android:id="@+id/organizer_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Email"
            android:enabled="false"
            android:textColor="@color/black"
            android:backgroundTint="@android:color/transparent"
            android:minHeight="32dp"/>

        <!-- Edit/Save Button -->
        <Button
            android:id="@+id/save_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:background="@drawable/rounded_button_bg"
            android:backgroundTint="@color/main_blue"
            android:padding="12dp"
            android:text="Save Profile"
            android:textColor="@android:color/white"
            android:textSize="16sp" />


    </LinearLayout>
</LinearLayout>
