<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center"
    android:background="@android:color/white">

    <!-- Button to Enter as Entrant -->
    <Button
        android:id="@+id/button_enter_entrant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Enter as Entrant"
        android:layout_marginTop="16dp"
        android:textSize="18sp"
        android:background="@drawable/rounded_button_bg" />

    <!-- Button to Enter as Organizer -->
    <Button
        android:id="@+id/button_enter_organizer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Enter as Organizer"
        android:layout_marginTop="16dp"
        android:textSize="18sp"
        android:background="@drawable/rounded_button_bg" />

    <!-- Button to Enter as Admin -->
    <Button
        android:id="@+id/button_enter_admin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Enter as Admin"
        android:layout_marginTop="16dp"
        android:textSize="18sp"
        android:background="@drawable/rounded_button_bg" />

</LinearLayout>
