...
                android:textStyle="bold" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <!-- RecyclerView for Signed-Up Events -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/view_event_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:clipToPadding="false"
        tools:listitem="@layout/organizer_event_entry" />

...
