<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">
    <ImageButton
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:src="@drawable/baseline_arrow_back_ios_24"
        android:contentDescription="Back"
        android:padding="8dp"
        android:layout_marginEnd="8dp" />

    <ImageView
        android:id="@+id/profile_photo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:src="@drawable/ic_account_circle_24"
        android:contentDescription="Profile Photo" />



    <Button
        android:id="@+id/select_photo_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Select Photo" />

    <EditText
        android:id="@+id/input_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Name" />

    <EditText
        android:id="@+id/input_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/input_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Phone Number"
        android:inputType="phone" />

    <!-- New CheckBoxes for Notifications -->
    <CheckBox
        android:id="@+id/checkbox_admin_notif"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:buttonTint="@color/main_blue"
        android:text="Receive Admin Notifications" />

    <CheckBox
        android:id="@+id/checkbox_organizer_notif"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:buttonTint="@color/main_blue"
        android:text="Receive Organizer Notifications" />

    <Button
        android:id="@+id/save_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_button_bg"
        android:text="Save Profile" />
</LinearLayout>

